--- a/index.ipynb
+++ b/index.ipynb
@@ -1316,84 +1316,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0      2012-11-13\n",
-       "1      2014-10-23\n",
-       "2      2014-09-05\n",
-       "3      2011-02-25\n",
-       "4      2016-06-15\n",
-       "5      2016-09-23\n",
-       "6      2014-08-23\n",
-       "7      2017-08-16\n",
-       "8      2017-11-18\n",
-       "9      2017-11-18\n",
-       "10     2015-12-10\n",
-       "11     2012-02-12\n",
-       "12     2012-02-12\n",
-       "13     2012-02-12\n",
-       "14     2012-02-12\n",
-       "15     2014-06-03\n",
-       "16     2016-11-18\n",
-       "17     2015-11-05\n",
-       "18     2015-11-05\n",
-       "19     2017-01-21\n",
-       "20     2016-11-06\n",
-       "21     2016-05-28\n",
-       "22     2016-05-08\n",
-       "23     2012-10-11\n",
-       "24     2017-04-08\n",
-       "25     2017-04-09\n",
-       "26     2010-11-17\n",
-       "27     2016-04-10\n",
-       "28     2016-03-10\n",
-       "29     2016-02-24\n",
-       "          ...    \n",
-       "2580   2015-09-08\n",
-       "2581   2013-07-12\n",
-       "2582   2016-07-27\n",
-       "2583   2015-10-12\n",
-       "2584   2017-06-20\n",
-       "2585   2015-10-17\n",
-       "2586   2015-06-25\n",
-       "2587   2012-08-14\n",
-       "2588   2015-07-02\n",
-       "2589   2015-03-22\n",
-       "2590   2007-10-02\n",
-       "2591   2016-07-17\n",
-       "2592   2015-08-03\n",
-       "2593   2013-08-28\n",
-       "2594   2011-08-25\n",
-       "2595   2014-02-27\n",
-       "2596   2014-07-01\n",
-       "2597   2016-08-20\n",
-       "2598   2011-08-01\n",
-       "2599   2014-01-27\n",
-       "2600   2012-06-14\n",
-       "2601   2014-01-14\n",
-       "2602   2012-05-19\n",
-       "2603   2013-03-01\n",
-       "2604   2013-11-03\n",
-       "2605   2013-06-02\n",
-       "2606   2016-08-14\n",
-       "2607   2016-06-14\n",
-       "2608   2013-10-02\n",
-       "2609   2016-08-15\n",
-       "Name: date, Length: 2610, dtype: datetime64[ns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'month'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-f286c75b4e5d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_datetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'date'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmonth\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   4374\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4375\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4376\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4377\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4378\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'month'"
+     ]
     }
    ],
    "source": [
     "# Your code here\n",
-    "pd.to_datetime(df['date'])"
+    "pd.to_datetime(df['date']).month"
    ]
   },
   {
