Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1393,7 +1393,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "dys = pd.to_datetime(df['date'])"
+    "days = pd.to_datetime(df['date'])"
    ]
   },
   {
