Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1333,7 +1333,7 @@
    "source": [
     "# Your code here\n",
     "days = pd.to_datetime(df['date'])\n",
-    "days"
+    "month = "
    ]
   },
   {
