Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1322,7 +1322,8 @@
    "source": [
     "# Your code here\n",
     "days = pd.to_datetime(df['date'])\n",
-    "month = pd.DataFrame(days.map(lambda x: x.month))"
+    "month = pd.DataFrame(days.map(lambda x: x.month))\n",
+    "month.columns = 'mont'"
    ]
   },
   {
