Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1316,14 +1316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
     "days = pd.to_datetime(df['date'])\n",
     "month = pd.DataFrame(days.map(lambda x: x.month))\n",
-    "month.columns = 'mont'"
+    "month.columns = ['month']"
    ]
   },
   {
