--- a/index.ipynb
+++ b/index.ipynb
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1352,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>date</th>\n",
+       "      <th>month</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1606,79 +1606,79 @@
        "</div>"
       ],
       "text/plain": [
-       "      date\n",
-       "0       11\n",
-       "1       10\n",
-       "2        9\n",
-       "3        2\n",
-       "4        6\n",
-       "5        9\n",
-       "6        8\n",
-       "7        8\n",
-       "8       11\n",
-       "9       11\n",
-       "10      12\n",
-       "11       2\n",
-       "12       2\n",
-       "13       2\n",
-       "14       2\n",
-       "15       6\n",
-       "16      11\n",
-       "17      11\n",
-       "18      11\n",
-       "19       1\n",
-       "20      11\n",
-       "21       5\n",
-       "22       5\n",
-       "23      10\n",
-       "24       4\n",
-       "25       4\n",
-       "26      11\n",
-       "27       4\n",
-       "28       3\n",
-       "29       2\n",
-       "...    ...\n",
-       "2580     9\n",
-       "2581     7\n",
-       "2582     7\n",
-       "2583    10\n",
-       "2584     6\n",
-       "2585    10\n",
-       "2586     6\n",
-       "2587     8\n",
-       "2588     7\n",
-       "2589     3\n",
-       "2590    10\n",
-       "2591     7\n",
-       "2592     8\n",
-       "2593     8\n",
-       "2594     8\n",
-       "2595     2\n",
-       "2596     7\n",
-       "2597     8\n",
-       "2598     8\n",
-       "2599     1\n",
-       "2600     6\n",
-       "2601     1\n",
-       "2602     5\n",
-       "2603     3\n",
-       "2604    11\n",
-       "2605     6\n",
-       "2606     8\n",
-       "2607     6\n",
-       "2608    10\n",
-       "2609     8\n",
+       "      month\n",
+       "0        11\n",
+       "1        10\n",
+       "2         9\n",
+       "3         2\n",
+       "4         6\n",
+       "5         9\n",
+       "6         8\n",
+       "7         8\n",
+       "8        11\n",
+       "9        11\n",
+       "10       12\n",
+       "11        2\n",
+       "12        2\n",
+       "13        2\n",
+       "14        2\n",
+       "15        6\n",
+       "16       11\n",
+       "17       11\n",
+       "18       11\n",
+       "19        1\n",
+       "20       11\n",
+       "21        5\n",
+       "22        5\n",
+       "23       10\n",
+       "24        4\n",
+       "25        4\n",
+       "26       11\n",
+       "27        4\n",
+       "28        3\n",
+       "29        2\n",
+       "...     ...\n",
+       "2580      9\n",
+       "2581      7\n",
+       "2582      7\n",
+       "2583     10\n",
+       "2584      6\n",
+       "2585     10\n",
+       "2586      6\n",
+       "2587      8\n",
+       "2588      7\n",
+       "2589      3\n",
+       "2590     10\n",
+       "2591      7\n",
+       "2592      8\n",
+       "2593      8\n",
+       "2594      8\n",
+       "2595      2\n",
+       "2596      7\n",
+       "2597      8\n",
+       "2598      8\n",
+       "2599      1\n",
+       "2600      6\n",
+       "2601      1\n",
+       "2602      5\n",
+       "2603      3\n",
+       "2604     11\n",
+       "2605      6\n",
+       "2606      8\n",
+       "2607      6\n",
+       "2608     10\n",
+       "2609      8\n",
        "\n",
        "[2610 rows x 1 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "month"
+    "month."
    ]
   },
   {
