Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1415,7 +1415,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "df.text.map()"
+    "df.text.map(lambda x: x)"
    ]
   },
   {
