--- a/index.ipynb
+++ b/index.ipynb
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1478,14 +1478,14 @@
        "Name: text, Length: 2610, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "df.text.map(lambda x: x.split()).mean"
+    "df.text.map(lambda x: x.split())"
    ]
   },
   {
