Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1485,7 +1485,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "df.text.map(lambda x: x.split())[]"
+    "df.text.map(lambda x: x.split())"
    ]
   },
   {
