Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1443,7 +1443,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "df['word_count'] = df.text"
+    "df['word_count'] = df.text.map(lambda x: len(x.splot()))"
    ]
   },
   {
