Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2678,12 +2678,13 @@
    "outputs": [],
    "source": [
     "def rewrite_as_lambda(value):\n",
-    "    if len(value) < 50:\n",
-    "        return 'Short'\n",
-    "    elif len(value) < 80:\n",
-    "        return 'Medium'\n",
-    "    else:\n",
-    "        return 'Long'\n",
+    "    \n",
+    "#     if len(value) < 50:\n",
+    "#         return 'Short'\n",
+    "#     elif len(value) < 80:\n",
+    "#         return 'Medium'\n",
+    "#     else:\n",
+    "#         return 'Long'\n",
     "#Hint: nest your if, else conditionals"
    ]
   },
