Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2685,7 +2685,7 @@
     "    else:\n",
     "        return 'Long'\n",
     "    \n",
-    "l\n",
+    "f_lambda = rewrite_\n",
     "#Hint: nest your if, else conditionals"
    ]
   },
