--- a/index.ipynb
+++ b/index.ipynb
@@ -2685,7 +2685,7 @@
     "    else:\n",
     "        return 'Long'\n",
     "    \n",
-    "f_lambda = 'Short' if len(value) < 50 else ('Medium' if len(valiue))\n",
+    "f_lambda = 'Short' if len(value) < 50 else ('Medium' if len(value) < 80 else )\n",
     "#Hint: nest your if, else conditionals"
    ]
   },
