Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2671,21 +2671,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'value' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-29-190df11b5fa9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;34m'Long'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mf_lambda\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Short'\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m50\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'Medium'\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m80\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m'Long'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;31m#Hint: nest your if, else conditionals\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'value' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def rewrite_as_lambda(value):\n",
     "    if len(value) < 50:\n",
@@ -2695,7 +2683,7 @@
     "    else:\n",
     "        return 'Long'\n",
     "    \n",
-    "f_lambda = 'Short' if len(value) < 50 else ('Medium' if len(value) < 80 else 'Long')\n",
+    "f_lambda = lambda value: 'Short' if len(value) < 50 else ('Medium' if len(value) < 80 else 'Long')\n",
     "#Hint: nest your if, else conditionals"
    ]
   },
@@ -2707,7 +2695,8 @@
    },
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "f_lam"
    ]
   },
   {
