Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2689,14 +2689,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Medium'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code here\n",
-    "f_lam"
+    "f_lambda('jasdgufkusdhfkhadsu hfaiughfiuagiudgag eiuwaeoioid')"
    ]
   },
   {
