--- a/index.ipynb
+++ b/index.ipynb
@@ -2705,7 +2705,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "df['Review_Length'] = df.text,mn"
+    "df['Review_Length'] = df.text.map(f_lambda)"
    ]
   },
   {
