Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3973,7 +3973,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "df['Review_Length'] = df.text.map(lambda value: 'Short' if (value) < 50 else ('Medium' if len(value) < 80 else 'Long'))\n",
+    "df['Review_Length'] = df.text.map(f_lambda)\n",
     "df"
    ]
   },
