Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2683,7 +2683,7 @@
     "    else:\n",
     "        return 'Long'\n",
     "    \n",
-    "f_lambda = lambda value: 'Short' if len(value) < 50 else ('Medium' if len(value) < 80 else 'Long')\n",
+    "f_lambda = lambda value: 'Short' if len(value.split()) < 50 else ('Medium' if len(value) < 80 else 'Long')\n",
     "#Hint: nest your if, else conditionals"
    ]
   },
